--- a/CMSProject/CMSProject.csproj
+++ b/CMSProject/CMSProject.csproj
@@ -146,7 +146,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -1019,6 +1018,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Index.cshtml" />
     <Content Include="Views\MVCWCFClient\Index.cshtml" />
+    <Content Include="Views\MVCWCFClient\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
