ver2: working post for insert and get for getting data

--- a/UserService/UserService.csproj
+++ b/UserService/UserService.csproj
@@ -76,7 +76,9 @@
       <DependentUpon>CMSProject.mdf</DependentUpon>
     </Content>
     <Content Include="Service1.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers.cs" />
@@ -157,7 +159,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50885</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50678/</IISUrl>
+          <IISUrl>http://localhost:50679/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
