--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\CMSProject\packages.config" />
   <repository path="..\UserService\packages.config" />
+  <repository path="..\WebApplication1\packages.config" />
 </repositories>
